tests/types/errors/import_native_handle_binding_type_mismatch.mog
const window = @import("window")

const { create: fn(i64) window.Window } =
    @import("counter")
